[workspace]
resolver = "2"
members = ["oxiplate", "oxiplate-derive", "oxiplate-traits", "oxiplate/tests/crates/*"]

[workspace.package]
authors = ["Brandon Frohs <brandon@19.codes>"]
homepage = "https://0b10011.io/oxiplate"
repository = "https://github.com/0b10011/oxiplate"
categories = ["template-engine"]
keywords = ["escaping", "whitespace-control", "compile-time"]
license = "MIT"
edition = "2024"

[workspace.lints.clippy]

# Lint groups
# See https://rust-lang.github.io/rust-clippy/master/index.html#lint_groups_priority
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# Lints
manual_assert = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage,coverage_nightly)"] }
