[workspace]
resolver = "2"
members = [
    "oxiplate",
    "oxiplate-derive",
    "oxiplate-traits",
    "oxiplate-derive/tests/crates/*",
    "oxiplate-derive/tests/config/crates/*",
    "oxiplate/tests/crates/*",
]

[workspace.package]
authors = ["Brandon Frohs <brandon@19.codes>"]
homepage = "https://0b10011.io/oxiplate"
repository = "https://github.com/0b10011/oxiplate"
categories = ["template-engine"]
keywords = ["escaping", "whitespace-control", "compile-time"]
license = "MIT"
edition = "2021"
# Found with `cargo msrv --workspace find --ignore-lockfile`
rust-version = "1.78.0"

[workspace.lints.clippy]

# Lint groups
# See https://rust-lang.github.io/rust-clippy/master/index.html#lint_groups_priority
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

double_must_use = { level = "allow" }

# Lints
manual_assert = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage,coverage_nightly)"] }
