[package]
name = "oxiplate-derive"
description = "Oxiplate's derive macro that provides a compile-time template engine with a focus on helpful error messages and whitespace control."
version = "0.15.8"
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
nom = "8.0.0"
nom-language = "0.1.0"
proc-macro2 = { version = "1.0.92", default-features = false, features = ["proc-macro"] }
quote = { version = "1.0.37", default-features = false, features = ["proc-macro"] }
serde = { version = "1.0.217", default-features = false, features = ["derive"], optional = true}
syn = { version = "2.0.91", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }
toml = {version = "0.9.2", default-features = false, features = ["std", "serde", "parse"], optional = true}

[dev-dependencies]
rustversion = "1.0.19"
trybuild = "1.0.101"
criterion = { version = "0.6.0", features = ["html_reports"] }

[features]
default = ["config"]

# Turns on some built-in escapers in the `oxiplate` package.
# Requires the use of `oxiplate` rather than `oxiplate-derive` directly.
built-in-escapers = []

# Makes it possible to configure Oxiplate via `/oxiplate.toml`.
config = ["dep:serde", "dep:toml"]

# Feature only meant to be turned on by the `oxiplate` package.
# Tells `oxiplate-derive` that the `oxiplate` library is present
# and allows for some additional functionality like escaping.
oxiplate = []

# Feature for conditional compilation to cover otherwise unreachable code.
unreachable = []

[[bench]]
name = "benchmark"
harness = false
