[package]
name = "oxiplate-derive"
description = "Oxiplate's derive macro that provides a compile-time template engine with a focus on helpful error messages and whitespace control."
version = "0.16.1"
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
percent-encoding = { version = "2.3.2", default-features = false, features = ["std"], optional = true }
proc-macro2 = { version = "1.0.106", default-features = false, features = ["proc-macro"] }
quote = { version = "1.0.44", default-features = false, features = ["proc-macro"] }
serde = { version = "1.0.217", default-features = false, features = ["derive"], optional = true}
syn = { version = "2.0.114", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }
toml = {version = "0.9.11", default-features = false, features = ["std", "serde", "parse"], optional = true}

[dev-dependencies]
rustversion = "1.0.19"
trybuild = "1.0.101"

[features]
default = ["config"]

# Improved error messages requiring nightly.
# Highly recommended during development.
better-errors = ["better-internal-errors", "external-template-spans"]

# Improved error messages for internal Oxiplate errors,
# but requires nightly.
better-internal-errors = ["dep:percent-encoding"]

# Turns on spans for external templates,
# considerably improving error messages
# by pointing to the exact code
# that caused an issue,
# but requires nightly.
external-template-spans = []

# Turns on some built-in escapers in the `oxiplate` package.
# Requires the use of `oxiplate` rather than `oxiplate-derive` directly.
built-in-escapers = []

# Makes it possible to configure Oxiplate via `/oxiplate.toml`.
config = ["dep:serde", "dep:toml"]

# Feature only meant to be turned on by the `oxiplate` package.
# Tells `oxiplate-derive` that the `oxiplate` library is present
# and allows for some additional functionality like escaping.
oxiplate = []

# Feature for conditional compilation to cover otherwise unreachable code.
unreachable = []
