[package]
name = "oxiplate-traits"
version = "0.2.1"
description = "Traits used by Oxiplate and Oxiplate-related libraries."
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
itoa = { version = "1.0.15", optional = true }

[features]

default = ["fast-escape-ints"]

# Includes the `itoa` dependency
# and speeds up integer escaping.
fast-escape-ints = ["dep:itoa"]

# Feature only meant to be turned on for tests.
# Changes the output for various types
# to make it clear which use `FastEscape`.
_debug-fast-escape-type-priority = []

[lints]
workspace = true
