[package]
name = "oxiplate"
description.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
itoa = "1.0.15"
oxiplate-derive = { version = "0.8.1", path = "../oxiplate-derive", default-features = false, features = ["oxiplate"] }

[dev-dependencies]
rustversion = "1.0.19"
trybuild = "1.0.101"

[features]
default = ["built-in-escapers", "config"]

# Automatically adds the built-in escapers to the list of available escapers,
# and uses "html" as the default escaper if a different one isn't specified.
built-in-escapers = ["oxiplate-derive/built-in-escapers"]

# Makes it possible to configure Oxiplate via `/oxiplate.toml`.
config = ["oxiplate-derive/config"]

# Feature only meant to be turned on for tests.
# Changes the output for various types to 
debug-fast-escape-type-priority = ["oxiplate-derive/debug-fast-escape-type-priority"]
