[package]
name = "oxiplate"
description = "Compile-time template engine with a focus on escaping, helpful error messages, and whitespace control."
version = "0.15.0"
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
oxiplate-derive = { version = "0.15.0", path = "../oxiplate-derive", default-features = false, features = ["oxiplate"] }
oxiplate-traits = { version = "0.1", path = "../oxiplate-traits", default-features = false, features = [] }

[dev-dependencies]
rustversion = "1.0.19"
trybuild = "1.0.101"

[features]
default = ["built-in-escapers", "config", "fast-escape-ints"]

# Automatically adds the built-in escapers to the list of available escapers,
# and uses "html" as the default escaper if a different one isn't specified.
built-in-escapers = ["oxiplate-derive/built-in-escapers"]

# Makes it possible to configure Oxiplate via `/oxiplate.toml`.
config = ["oxiplate-derive/config"]

# Feature only meant to be turned on for tests.
# Changes the output for various types to 
debug-fast-escape-type-priority = ["oxiplate-traits/debug-fast-escape-type-priority"]

# Includes the `itoa` dependency
# and speeds up integer escaping.
fast-escape-ints = ["oxiplate-traits/fast-escape-ints"]
