[package]
name = "oxiplate"
description = "Compile-time template engine with a focus on escaping, helpful error messages, and whitespace control."
version = "0.16.4"
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
oxiplate-derive = { version = "0.16.4", path = "../oxiplate-derive", default-features = false, features = ["oxiplate"] }
oxiplate-traits = { version = "0.1", path = "../oxiplate-traits", default-features = false, features = [] }

[dev-dependencies]
rustversion = "1.0.19"
trybuild = "1.0.116"

[features]
default = ["built-in-escapers", "config", "fast-escape-ints"]

# Improved error messages requiring nightly.
# Highly recommended during development.
better-errors = ["better-internal-errors", "external-template-spans"]

# Improved error messages for internal Oxiplate errors,
# but requires nightly.
better-internal-errors = ["oxiplate-derive/better-internal-errors"]

# Automatically adds the built-in escapers to the list of available escapers,
# and uses "html" as the default escaper if a different one isn't specified.
built-in-escapers = ["oxiplate-derive/built-in-escapers"]

# Makes it possible to configure Oxiplate via `/oxiplate.toml`.
config = ["oxiplate-derive/config"]

# Feature only meant to be turned on for tests.
# Changes the output for various types to 
debug-fast-escape-type-priority = ["oxiplate-traits/debug-fast-escape-type-priority"]

# Turns on spans for external templates,
# considerably improving error messages
# by pointing to the exact code
# that caused an issue,
# but requires nightly.
external-template-spans = ["oxiplate-derive/external-template-spans"]

# Includes the `itoa` dependency
# and speeds up integer escaping.
fast-escape-ints = ["oxiplate-traits/fast-escape-ints"]

# Feature for conditional compilation to cover otherwise unreachable code.
unreachable = ["oxiplate-derive/unreachable"]
